--- a/ap-csp-create-task/index.html
+++ b/ap-csp-create-task/index.html
@@ -13,6 +13,10 @@
     <title>Vite App</title>
   </head>
   <body>
+    <h1>Valorant Agent Randomizer!</h1>
+    <section class="display"></section>
+    <button class="btn" id="agent-btn">Get Random Agent</button>
+    <button class="btn" id="reset-btn">Reset</button>
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
