--- a/ap-csp-create-task/index.html
+++ b/ap-csp-create-task/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <h1>Valorant Agent Randomizer!</h1>
+    <button class="btn" id="instructions-btn">How to Use the Randomizer! (Please Read) </button>
     <section class="display"></section>
     <button class="btn" id="agent-btn">Get Random Agent</button>
     <button class="btn" id="reset-btn">Reset</button>
